Remove java sdk v1