@@ -1,14 +1,8 @@
 package com.commercetools.sync.shoppinglists.utils;
 
-import static com.commercetools.sync.commons.utils.CompletableFutureUtils.mapValuesToFutureOfCompletedValues;
-import static com.commercetools.sync.shoppinglists.utils.LineItemUpdateActionUtils.buildLineItemsUpdateActions;
-import static com.commercetools.sync.shoppinglists.utils.ShoppingListSyncUtils.buildActions;
-import static com.commercetools.sync.shoppinglists.utils.TextLineItemUpdateActionUtils.buildTextLineItemsUpdateActions;
-import static io.sphere.sdk.json.SphereJsonUtils.readObjectFromResource;
+import static com.commercetools.api.models.common.LocalizedString.ofEnglish;
 import static java.util.Arrays.asList;
-import static java.util.Collections.emptyList;
-import static java.util.Collections.singletonList;
-import static java.util.Collections.singletonMap;
+import static java.util.Collections.*;
 import static java.util.concurrent.CompletableFuture.completedFuture;
 import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -16,39 +10,40 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+import com.commercetools.api.client.ProjectApiRoot;
+import com.commercetools.api.models.common.LocalizedString;
+import com.commercetools.api.models.customer.CustomerResourceIdentifierBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingList;
+import com.commercetools.api.models.shopping_list.ShoppingListAddTextLineItemAction;
+import com.commercetools.api.models.shopping_list.ShoppingListAddTextLineItemActionBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingListChangeNameActionBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingListChangeTextLineItemNameActionBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingListChangeTextLineItemQuantityActionBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingListDraft;
+import com.commercetools.api.models.shopping_list.ShoppingListDraftBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingListRemoveTextLineItemActionBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingListSetAnonymousIdActionBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingListSetCustomFieldActionBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingListSetCustomerActionBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingListSetDeleteDaysAfterLastModificationActionBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingListSetDescriptionActionBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingListSetSlugActionBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingListSetTextLineItemCustomFieldActionBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingListSetTextLineItemDescriptionActionBuilder;
+import com.commercetools.api.models.shopping_list.ShoppingListUpdateAction;
+import com.commercetools.api.models.shopping_list.TextLineItemDraft;
+import com.commercetools.api.models.shopping_list.TextLineItemDraftBuilder;
+import com.commercetools.api.models.type.CustomFieldsDraftBuilder;
 import com.commercetools.sync.commons.utils.CaffeineReferenceIdToKeyCacheImpl;
+import com.commercetools.sync.commons.utils.CompletableFutureUtils;
 import com.commercetools.sync.commons.utils.ReferenceIdToKeyCache;
+import com.commercetools.sync.commons.utils.TestUtils;
 import com.commercetools.sync.services.TypeService;
 import com.commercetools.sync.shoppinglists.ShoppingListSyncOptions;
 import com.commercetools.sync.shoppinglists.ShoppingListSyncOptionsBuilder;
 import com.commercetools.sync.shoppinglists.helpers.TextLineItemReferenceResolver;
-import com.fasterxml.jackson.databind.node.JsonNodeFactory;
-import io.sphere.sdk.client.SphereClient;
-import io.sphere.sdk.commands.UpdateAction;
-import io.sphere.sdk.models.LocalizedString;
-import io.sphere.sdk.models.ResourceIdentifier;
-import io.sphere.sdk.shoppinglists.ShoppingList;
-import io.sphere.sdk.shoppinglists.ShoppingListDraft;
-import io.sphere.sdk.shoppinglists.ShoppingListDraftBuilder;
-import io.sphere.sdk.shoppinglists.TextLineItemDraft;
-import io.sphere.sdk.shoppinglists.TextLineItemDraftBuilder;
-import io.sphere.sdk.shoppinglists.commands.updateactions.AddTextLineItem;
-import io.sphere.sdk.shoppinglists.commands.updateactions.ChangeName;
-import io.sphere.sdk.shoppinglists.commands.updateactions.ChangeTextLineItemName;
-import io.sphere.sdk.shoppinglists.commands.updateactions.ChangeTextLineItemQuantity;
-import io.sphere.sdk.shoppinglists.commands.updateactions.RemoveTextLineItem;
-import io.sphere.sdk.shoppinglists.commands.updateactions.SetAnonymousId;
-import io.sphere.sdk.shoppinglists.commands.updateactions.SetCustomField;
-import io.sphere.sdk.shoppinglists.commands.updateactions.SetCustomer;
-import io.sphere.sdk.shoppinglists.commands.updateactions.SetDeleteDaysAfterLastModification;
-import io.sphere.sdk.shoppinglists.commands.updateactions.SetDescription;
-import io.sphere.sdk.shoppinglists.commands.updateactions.SetSlug;
-import io.sphere.sdk.shoppinglists.commands.updateactions.SetTextLineItemCustomField;
-import io.sphere.sdk.shoppinglists.commands.updateactions.SetTextLineItemDescription;
-import io.sphere.sdk.types.CustomFieldsDraft;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
@@ -70,7 +65,7 @@ class TextLineItemListUpdateActionUtilsTest {
       RES_ROOT + "shoppinglist-with-textlineitems-name-1234.json";
 
   private static final ShoppingListSyncOptions SYNC_OPTIONS =
-      ShoppingListSyncOptionsBuilder.of(mock(SphereClient.class)).build();
+      ShoppingListSyncOptionsBuilder.of(mock(ProjectApiRoot.class)).build();
 
   private static final TextLineItemReferenceResolver textLineItemReferenceResolver =
       new TextLineItemReferenceResolver(SYNC_OPTIONS, getMockTypeService());
@@ -85,10 +80,11 @@ class TextLineItemListUpdateActionUtilsTest {
     when(oldShoppingList.getTextLineItems()).thenReturn(emptyList());
 
     final ShoppingListDraft newShoppingList =
-        ShoppingListDraftBuilder.of(LocalizedString.ofEnglish("name")).build();
+        ShoppingListDraftBuilder.of().name(ofEnglish("name")).build();
 
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildTextLineItemsUpdateActions(oldShoppingList, newShoppingList, SYNC_OPTIONS);
+    final List<ShoppingListUpdateAction> updateActions =
+        TextLineItemUpdateActionUtils.buildTextLineItemsUpdateActions(
+            oldShoppingList, newShoppingList, SYNC_OPTIONS);
 
     assertThat(updateActions).isEmpty();
   }
@@ -99,10 +95,11 @@ class TextLineItemListUpdateActionUtilsTest {
     when(oldShoppingList.getTextLineItems()).thenReturn(null);
 
     final ShoppingListDraft newShoppingList =
-        ShoppingListDraftBuilder.of(LocalizedString.ofEnglish("name")).build();
+        ShoppingListDraftBuilder.of().name(ofEnglish("name")).build();
 
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildTextLineItemsUpdateActions(oldShoppingList, newShoppingList, SYNC_OPTIONS);
+    final List<ShoppingListUpdateAction> updateActions =
+        TextLineItemUpdateActionUtils.buildTextLineItemsUpdateActions(
+            oldShoppingList, newShoppingList, SYNC_OPTIONS);
 
     assertThat(updateActions).isEmpty();
   }
@@ -113,12 +110,11 @@ class TextLineItemListUpdateActionUtilsTest {
     when(oldShoppingList.getTextLineItems()).thenReturn(null);
 
     final ShoppingListDraft newShoppingList =
-        ShoppingListDraftBuilder.of(LocalizedString.ofEnglish("name"))
-            .textLineItems(emptyList())
-            .build();
+        ShoppingListDraftBuilder.of().name(ofEnglish("name")).textLineItems(emptyList()).build();
 
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildTextLineItemsUpdateActions(oldShoppingList, newShoppingList, SYNC_OPTIONS);
+    final List<ShoppingListUpdateAction> updateActions =
+        TextLineItemUpdateActionUtils.buildTextLineItemsUpdateActions(
+            oldShoppingList, newShoppingList, SYNC_OPTIONS);
 
     assertThat(updateActions).isEmpty();
   }
@@ -130,12 +126,14 @@ class TextLineItemListUpdateActionUtilsTest {
     when(oldShoppingList.getTextLineItems()).thenReturn(null);
 
     final ShoppingListDraft newShoppingList =
-        ShoppingListDraftBuilder.of(LocalizedString.ofEnglish("name"))
+        ShoppingListDraftBuilder.of()
+            .name(ofEnglish("name"))
             .textLineItems(singletonList(null))
             .build();
 
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildTextLineItemsUpdateActions(oldShoppingList, newShoppingList, SYNC_OPTIONS);
+    final List<ShoppingListUpdateAction> updateActions =
+        TextLineItemUpdateActionUtils.buildTextLineItemsUpdateActions(
+            oldShoppingList, newShoppingList, SYNC_OPTIONS);
 
     assertThat(updateActions).isEmpty();
   }
@@ -144,19 +142,27 @@ class TextLineItemListUpdateActionUtilsTest {
   void
       buildTextLineItemsUpdateActions_WithNullNewLineItemsAndExistingLineItems_ShouldBuild3RemoveActions() {
     final ShoppingList oldShoppingList =
-        readObjectFromResource(SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
+        TestUtils.readObjectFromResource(
+            SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
 
     final ShoppingListDraft newShoppingList =
-        ShoppingListDraftBuilder.of(LocalizedString.ofEnglish("name")).build();
+        ShoppingListDraftBuilder.of().name(ofEnglish("name")).build();
 
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildTextLineItemsUpdateActions(oldShoppingList, newShoppingList, SYNC_OPTIONS);
+    final List<ShoppingListUpdateAction> updateActions =
+        TextLineItemUpdateActionUtils.buildTextLineItemsUpdateActions(
+            oldShoppingList, newShoppingList, SYNC_OPTIONS);
 
     assertThat(updateActions)
         .containsExactly(
-            RemoveTextLineItem.of("text_line_item_id_1"),
-            RemoveTextLineItem.of("text_line_item_id_2"),
-            RemoveTextLineItem.of("text_line_item_id_3"));
+            ShoppingListRemoveTextLineItemActionBuilder.of()
+                .textLineItemId("text_line_item_id_1")
+                .build(),
+            ShoppingListRemoveTextLineItemActionBuilder.of()
+                .textLineItemId("text_line_item_id_2")
+                .build(),
+            ShoppingListRemoveTextLineItemActionBuilder.of()
+                .textLineItemId("text_line_item_id_3")
+                .build());
   }
 
   @Test
@@ -169,8 +175,9 @@ class TextLineItemListUpdateActionUtilsTest {
         mapToShoppingListDraftWithResolvedTextLineItemReferences(
             SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123);
 
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildTextLineItemsUpdateActions(oldShoppingList, newShoppingList, SYNC_OPTIONS);
+    final List<ShoppingListUpdateAction> updateActions =
+        TextLineItemUpdateActionUtils.buildTextLineItemsUpdateActions(
+            oldShoppingList, newShoppingList, SYNC_OPTIONS);
 
     assertThat(newShoppingList.getTextLineItems()).isNotNull();
     assertThat(updateActions)
@@ -187,16 +194,18 @@ class TextLineItemListUpdateActionUtilsTest {
     when(oldShoppingList.getTextLineItems()).thenReturn(null);
 
     final ShoppingListDraft newShoppingList =
-        ShoppingListDraftBuilder.of(LocalizedString.ofEnglish("name"))
+        ShoppingListDraftBuilder.of()
+            .name(ofEnglish("name"))
             .textLineItems(
                 asList(
-                    TextLineItemDraftBuilder.of(LocalizedString.ofEnglish("name1"), null).build(),
-                    TextLineItemDraftBuilder.of(LocalizedString.ofEnglish("name2"), 0L).build(),
-                    TextLineItemDraftBuilder.of(LocalizedString.ofEnglish("name3"), -1L).build()))
+                    TextLineItemDraftBuilder.of().name(ofEnglish("name1")).quantity(null).build(),
+                    TextLineItemDraftBuilder.of().name(ofEnglish("name2")).quantity(0L).build(),
+                    TextLineItemDraftBuilder.of().name(ofEnglish("name3")).quantity(-1L).build()))
             .build();
 
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildTextLineItemsUpdateActions(oldShoppingList, newShoppingList, SYNC_OPTIONS);
+    final List<ShoppingListUpdateAction> updateActions =
+        TextLineItemUpdateActionUtils.buildTextLineItemsUpdateActions(
+            oldShoppingList, newShoppingList, SYNC_OPTIONS);
 
     assertThat(updateActions).isEmpty();
   }
@@ -204,14 +213,16 @@ class TextLineItemListUpdateActionUtilsTest {
   @Test
   void buildLineItemsUpdateActions_WithIdenticalTextLineItems_ShouldNotBuildUpdateActions() {
     final ShoppingList oldShoppingList =
-        readObjectFromResource(SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
+        TestUtils.readObjectFromResource(
+            SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
 
     final ShoppingListDraft newShoppingList =
         mapToShoppingListDraftWithResolvedTextLineItemReferences(
             SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123);
 
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildLineItemsUpdateActions(oldShoppingList, newShoppingList, SYNC_OPTIONS);
+    final List<ShoppingListUpdateAction> updateActions =
+        LineItemUpdateActionUtils.buildLineItemsUpdateActions(
+            oldShoppingList, newShoppingList, SYNC_OPTIONS);
 
     assertThat(updateActions).isEmpty();
   }
@@ -219,82 +230,122 @@ class TextLineItemListUpdateActionUtilsTest {
   @Test
   void buildLineItemsUpdateActions_WithAllDifferentFields_ShouldBuildUpdateActions() {
     final ShoppingList oldShoppingList =
-        readObjectFromResource(SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
+        TestUtils.readObjectFromResource(
+            SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
 
     final ShoppingListDraft newShoppingList =
         mapToShoppingListDraftWithResolvedTextLineItemReferences(
             SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123_WITH_CHANGES);
 
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildTextLineItemsUpdateActions(oldShoppingList, newShoppingList, SYNC_OPTIONS);
+    final List<ShoppingListUpdateAction> updateActions =
+        TextLineItemUpdateActionUtils.buildTextLineItemsUpdateActions(
+            oldShoppingList, newShoppingList, SYNC_OPTIONS);
 
     assertThat(updateActions)
         .containsExactly(
-            ChangeTextLineItemName.of(
-                "text_line_item_id_1",
-                LocalizedString.ofEnglish("newName1-EN").plus(Locale.GERMAN, "newName1-DE")),
-            SetTextLineItemDescription.of("text_line_item_id_1")
-                .withDescription(
-                    LocalizedString.ofEnglish("newDesc1-EN").plus(Locale.GERMAN, "newDesc1-DE")),
-            ChangeTextLineItemQuantity.of("text_line_item_id_1", 2L),
-            SetTextLineItemCustomField.ofJson(
-                "textField", JsonNodeFactory.instance.textNode("newText1"), "text_line_item_id_1"),
-            ChangeTextLineItemName.of(
-                "text_line_item_id_2",
-                LocalizedString.ofEnglish("newName2-EN").plus(Locale.GERMAN, "newName2-DE")),
-            SetTextLineItemDescription.of("text_line_item_id_2")
-                .withDescription(
-                    LocalizedString.ofEnglish("newDesc2-EN").plus(Locale.GERMAN, "newDesc2-DE")),
-            ChangeTextLineItemQuantity.of("text_line_item_id_2", 4L),
-            SetTextLineItemCustomField.ofJson(
-                "textField", JsonNodeFactory.instance.textNode("newText2"), "text_line_item_id_2"),
-            ChangeTextLineItemName.of(
-                "text_line_item_id_3",
-                LocalizedString.ofEnglish("newName3-EN").plus(Locale.GERMAN, "newName3-DE")),
-            SetTextLineItemDescription.of("text_line_item_id_3")
-                .withDescription(
-                    LocalizedString.ofEnglish("newDesc3-EN").plus(Locale.GERMAN, "newDesc3-DE")),
-            ChangeTextLineItemQuantity.of("text_line_item_id_3", 6L),
-            SetTextLineItemCustomField.ofJson(
-                "textField", JsonNodeFactory.instance.textNode("newText3"), "text_line_item_id_3"));
+            ShoppingListChangeTextLineItemNameActionBuilder.of()
+                .textLineItemId("text_line_item_id_1")
+                .name(ofEnglish("newName1-EN").plus(Locale.GERMAN, "newName1-DE"))
+                .build(),
+            ShoppingListSetTextLineItemDescriptionActionBuilder.of()
+                .textLineItemId("text_line_item_id_1")
+                .description(ofEnglish("newDesc1-EN").plus(Locale.GERMAN, "newDesc1-DE"))
+                .build(),
+            ShoppingListChangeTextLineItemQuantityActionBuilder.of()
+                .textLineItemId("text_line_item_id_1")
+                .quantity(2L)
+                .build(),
+            ShoppingListSetTextLineItemCustomFieldActionBuilder.of()
+                .name("textField")
+                .value("newText1")
+                .textLineItemId("text_line_item_id_1")
+                .build(),
+            ShoppingListChangeTextLineItemNameActionBuilder.of()
+                .textLineItemId("text_line_item_id_2")
+                .name(ofEnglish("newName2-EN").plus(Locale.GERMAN, "newName2-DE"))
+                .build(),
+            ShoppingListSetTextLineItemDescriptionActionBuilder.of()
+                .textLineItemId("text_line_item_id_2")
+                .description(ofEnglish("newDesc2-EN").plus(Locale.GERMAN, "newDesc2-DE"))
+                .build(),
+            ShoppingListChangeTextLineItemQuantityActionBuilder.of()
+                .textLineItemId("text_line_item_id_2")
+                .quantity(4L)
+                .build(),
+            ShoppingListSetTextLineItemCustomFieldActionBuilder.of()
+                .name("textField")
+                .value("newText2")
+                .textLineItemId("text_line_item_id_2")
+                .build(),
+            ShoppingListChangeTextLineItemNameActionBuilder.of()
+                .textLineItemId("text_line_item_id_3")
+                .name(ofEnglish("newName3-EN").plus(Locale.GERMAN, "newName3-DE"))
+                .build(),
+            ShoppingListSetTextLineItemDescriptionActionBuilder.of()
+                .textLineItemId("text_line_item_id_3")
+                .description(ofEnglish("newDesc3-EN").plus(Locale.GERMAN, "newDesc3-DE"))
+                .build(),
+            ShoppingListChangeTextLineItemQuantityActionBuilder.of()
+                .textLineItemId("text_line_item_id_3")
+                .quantity(6L)
+                .build(),
+            ShoppingListSetTextLineItemCustomFieldActionBuilder.of()
+                .name("textField")
+                .value("newText3")
+                .textLineItemId("text_line_item_id_3")
+                .build());
   }
 
   @Test
   void
       buildTextLineItemsUpdateActions_WithOneMissingTextLineItem_ShouldBuildOneRemoveTextLineItemAction() {
     final ShoppingList oldShoppingList =
-        readObjectFromResource(SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
+        TestUtils.readObjectFromResource(
+            SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
 
     final ShoppingListDraft newShoppingList =
         mapToShoppingListDraftWithResolvedTextLineItemReferences(
             SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_12);
 
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildTextLineItemsUpdateActions(oldShoppingList, newShoppingList, SYNC_OPTIONS);
+    final List<ShoppingListUpdateAction> updateActions =
+        TextLineItemUpdateActionUtils.buildTextLineItemsUpdateActions(
+            oldShoppingList, newShoppingList, SYNC_OPTIONS);
 
-    assertThat(updateActions).containsExactly(RemoveTextLineItem.of("text_line_item_id_3"));
+    assertThat(updateActions)
+        .containsExactly(
+            ShoppingListRemoveTextLineItemActionBuilder.of()
+                .textLineItemId("text_line_item_id_3")
+                .build());
   }
 
   @Test
   void buildTextLineItemsUpdateActions_WithOneExtraTextLineItem_ShouldBuildAddTextLineItemAction() {
     final ShoppingList oldShoppingList =
-        readObjectFromResource(SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
+        TestUtils.readObjectFromResource(
+            SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
 
     final ShoppingListDraft newShoppingList =
         mapToShoppingListDraftWithResolvedTextLineItemReferences(
             SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_1234);
 
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildTextLineItemsUpdateActions(oldShoppingList, newShoppingList, SYNC_OPTIONS);
+    final List<ShoppingListUpdateAction> updateActions =
+        TextLineItemUpdateActionUtils.buildTextLineItemsUpdateActions(
+            oldShoppingList, newShoppingList, SYNC_OPTIONS);
 
     final TextLineItemDraft expectedLineItemDraft =
-        TextLineItemDraftBuilder.of(
-                LocalizedString.ofEnglish("name4-EN").plus(Locale.GERMAN, "name4-DE"), 4L)
-            .description(LocalizedString.ofEnglish("desc4-EN").plus(Locale.GERMAN, "desc4-DE"))
+        TextLineItemDraftBuilder.of()
+            .name(ofEnglish("name4-EN").plus(Locale.GERMAN, "name4-DE"))
+            .quantity(4L)
+            .description(ofEnglish("desc4-EN").plus(Locale.GERMAN, "desc4-DE"))
             .custom(
-                CustomFieldsDraft.ofTypeIdAndJson(
-                    "custom_type_id",
-                    singletonMap("textField", JsonNodeFactory.instance.textNode("text4"))))
+                CustomFieldsDraftBuilder.of()
+                    .type(
+                        typeResourceIdentifierBuilder ->
+                            typeResourceIdentifierBuilder.id("custom_type_id"))
+                    .fields(
+                        fieldContainerBuilder ->
+                            fieldContainerBuilder.addValue("textField", "text4"))
+                    .build())
             .addedAt(ZonedDateTime.parse("2020-11-06T10:00:00.000Z"))
             .build();
 
@@ -302,80 +353,25 @@ class TextLineItemListUpdateActionUtilsTest {
   }
 
   @Test
-  void buildTextLineItemsUpdateAction_WithTextLineItemWithNullName_ShouldTriggerErrorCallback() {
-    final ShoppingList oldShoppingList =
-        readObjectFromResource(SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
-
-    final TextLineItemDraft updatedTextLineItemDraft1 =
-        TextLineItemDraftBuilder.of(
-                LocalizedString.ofEnglish("newName1-EN").plus(Locale.GERMAN, "newName1-DE"), 2L)
-            .description(
-                LocalizedString.ofEnglish("newDesc1-EN").plus(Locale.GERMAN, "newDesc1-DE"))
-            .custom(
-                CustomFieldsDraft.ofTypeIdAndJson(
-                    "custom_type_id",
-                    singletonMap("textField", JsonNodeFactory.instance.textNode("newText1"))))
-            .build();
-
-    final ShoppingListDraft newShoppingList =
-        ShoppingListDraftBuilder.of(LocalizedString.ofEnglish("shoppinglist"))
-            .key("key")
-            .textLineItems(
-                asList(updatedTextLineItemDraft1, TextLineItemDraftBuilder.of(null, 1L).build()))
-            .build();
-
-    final List<String> errors = new ArrayList<>();
-    final List<UpdateAction<ShoppingList>> updateActionsBeforeCallback = new ArrayList<>();
-
-    final ShoppingListSyncOptions syncOptions =
-        ShoppingListSyncOptionsBuilder.of(mock(SphereClient.class))
-            .errorCallback(
-                (exception, oldResource, newResource, updateActions) -> {
-                  errors.add(exception.getMessage());
-                  updateActionsBeforeCallback.addAll(updateActions);
-                })
-            .build();
-
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildTextLineItemsUpdateActions(oldShoppingList, newShoppingList, syncOptions);
-
-    assertThat(updateActions).isEmpty();
-    assertThat(updateActionsBeforeCallback)
-        .containsExactly(
-            ChangeTextLineItemName.of(
-                "text_line_item_id_1",
-                LocalizedString.ofEnglish("newName1-EN").plus(Locale.GERMAN, "newName1-DE")),
-            SetTextLineItemDescription.of("text_line_item_id_1")
-                .withDescription(
-                    LocalizedString.ofEnglish("newDesc1-EN").plus(Locale.GERMAN, "newDesc1-DE")),
-            ChangeTextLineItemQuantity.of("text_line_item_id_1", 2L),
-            SetTextLineItemCustomField.ofJson(
-                "textField", JsonNodeFactory.instance.textNode("newText1"), "text_line_item_id_1"));
-
-    assertThat(errors).hasSize(1);
-    assertThat(errors.get(0))
-        .isEqualTo(
-            "TextLineItemDraft at position '1' of the ShoppingListDraft with key "
-                + "'key' has no name set. Please make sure all text line items have names.");
-  }
-
-  @Test
   void buildTextLineItemsUpdateAction_WithTextLineItemWithoutName_ShouldTriggerErrorCallback() {
     final ShoppingList oldShoppingList =
-        readObjectFromResource(SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
+        TestUtils.readObjectFromResource(
+            SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
 
     final ShoppingListDraft newShoppingList =
-        ShoppingListDraftBuilder.of(LocalizedString.ofEnglish("shoppinglist"))
+        ShoppingListDraftBuilder.of()
+            .name(ofEnglish("shoppinglist"))
             .key("key")
             .textLineItems(
-                singletonList(TextLineItemDraftBuilder.of(LocalizedString.of(), 1L).build()))
+                singletonList(
+                    TextLineItemDraftBuilder.of().name(LocalizedString.of()).quantity(1L).build()))
             .build();
 
     final List<String> errors = new ArrayList<>();
-    final List<UpdateAction<ShoppingList>> updateActionsBeforeCallback = new ArrayList<>();
+    final List<ShoppingListUpdateAction> updateActionsBeforeCallback = new ArrayList<>();
 
     final ShoppingListSyncOptions syncOptions =
-        ShoppingListSyncOptionsBuilder.of(mock(SphereClient.class))
+        ShoppingListSyncOptionsBuilder.of(mock(ProjectApiRoot.class))
             .errorCallback(
                 (exception, oldResource, newResource, updateActions) -> {
                   errors.add(exception.getMessage());
@@ -383,8 +379,9 @@ class TextLineItemListUpdateActionUtilsTest {
                 })
             .build();
 
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildTextLineItemsUpdateActions(oldShoppingList, newShoppingList, syncOptions);
+    final List<ShoppingListUpdateAction> updateActions =
+        TextLineItemUpdateActionUtils.buildTextLineItemsUpdateActions(
+            oldShoppingList, newShoppingList, syncOptions);
 
     assertThat(updateActions).isEmpty();
     assertThat(updateActionsBeforeCallback).isEmpty();
@@ -400,7 +397,8 @@ class TextLineItemListUpdateActionUtilsTest {
   void
       buildTextLineItemsUpdateActions_WithNewTextLineItemsWithoutValidQuantity_ShouldNotBuildAddActions() {
     final ShoppingList oldShoppingList =
-        readObjectFromResource(SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
+        TestUtils.readObjectFromResource(
+            SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
 
     final ShoppingListDraft newShoppingList =
         mapToShoppingListDraftWithResolvedTextLineItemReferences(
@@ -408,13 +406,14 @@ class TextLineItemListUpdateActionUtilsTest {
 
     Objects.requireNonNull(newShoppingList.getTextLineItems())
         .addAll(
-            Arrays.asList(
-                TextLineItemDraftBuilder.of(LocalizedString.ofEnglish("name1"), null).build(),
-                TextLineItemDraftBuilder.of(LocalizedString.ofEnglish("name2"), 0L).build(),
-                TextLineItemDraftBuilder.of(LocalizedString.ofEnglish("name3"), -1L).build()));
+            List.of(
+                TextLineItemDraftBuilder.of().name(ofEnglish("name1")).quantity(null).build(),
+                TextLineItemDraftBuilder.of().name(ofEnglish("name2")).quantity(0L).build(),
+                TextLineItemDraftBuilder.of().name(ofEnglish("name3")).quantity(-1L).build()));
 
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildTextLineItemsUpdateActions(oldShoppingList, newShoppingList, SYNC_OPTIONS);
+    final List<ShoppingListUpdateAction> updateActions =
+        TextLineItemUpdateActionUtils.buildTextLineItemsUpdateActions(
+            oldShoppingList, newShoppingList, SYNC_OPTIONS);
 
     assertThat(updateActions).isEmpty();
   }
@@ -422,51 +421,86 @@ class TextLineItemListUpdateActionUtilsTest {
   @Test
   void buildActions_WithDifferentValuesWithTextLineItems_ShouldReturnActions() {
     final ShoppingList oldShoppingList =
-        readObjectFromResource(SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
+        TestUtils.readObjectFromResource(
+            SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123, ShoppingList.class);
 
     final ShoppingListDraft newShoppingList =
         mapToShoppingListDraftWithResolvedTextLineItemReferences(
             SHOPPING_LIST_WITH_TEXT_LINE_ITEMS_NAME_123_WITH_CHANGES);
 
-    final List<UpdateAction<ShoppingList>> updateActions =
-        buildActions(oldShoppingList, newShoppingList, mock(ShoppingListSyncOptions.class));
+    final List<ShoppingListUpdateAction> updateActions =
+        ShoppingListSyncUtils.buildActions(
+            oldShoppingList, newShoppingList, mock(ShoppingListSyncOptions.class));
 
     assertThat(updateActions)
         .containsExactly(
-            SetSlug.of(LocalizedString.ofEnglish("newSlug")),
-            ChangeName.of(LocalizedString.ofEnglish("newName")),
-            SetDescription.of(LocalizedString.ofEnglish("newDescription")),
-            SetAnonymousId.of("newAnonymousId"),
-            SetCustomer.of(ResourceIdentifier.ofId("customer_id_2")),
-            SetDeleteDaysAfterLastModification.of(45),
-            SetCustomField.ofJson("textField", JsonNodeFactory.instance.textNode("newTextValue")),
-            ChangeTextLineItemName.of(
-                "text_line_item_id_1",
-                LocalizedString.ofEnglish("newName1-EN").plus(Locale.GERMAN, "newName1-DE")),
-            SetTextLineItemDescription.of("text_line_item_id_1")
-                .withDescription(
-                    LocalizedString.ofEnglish("newDesc1-EN").plus(Locale.GERMAN, "newDesc1-DE")),
-            ChangeTextLineItemQuantity.of("text_line_item_id_1", 2L),
-            SetTextLineItemCustomField.ofJson(
-                "textField", JsonNodeFactory.instance.textNode("newText1"), "text_line_item_id_1"),
-            ChangeTextLineItemName.of(
-                "text_line_item_id_2",
-                LocalizedString.ofEnglish("newName2-EN").plus(Locale.GERMAN, "newName2-DE")),
-            SetTextLineItemDescription.of("text_line_item_id_2")
-                .withDescription(
-                    LocalizedString.ofEnglish("newDesc2-EN").plus(Locale.GERMAN, "newDesc2-DE")),
-            ChangeTextLineItemQuantity.of("text_line_item_id_2", 4L),
-            SetTextLineItemCustomField.ofJson(
-                "textField", JsonNodeFactory.instance.textNode("newText2"), "text_line_item_id_2"),
-            ChangeTextLineItemName.of(
-                "text_line_item_id_3",
-                LocalizedString.ofEnglish("newName3-EN").plus(Locale.GERMAN, "newName3-DE")),
-            SetTextLineItemDescription.of("text_line_item_id_3")
-                .withDescription(
-                    LocalizedString.ofEnglish("newDesc3-EN").plus(Locale.GERMAN, "newDesc3-DE")),
-            ChangeTextLineItemQuantity.of("text_line_item_id_3", 6L),
-            SetTextLineItemCustomField.ofJson(
-                "textField", JsonNodeFactory.instance.textNode("newText3"), "text_line_item_id_3"));
+            ShoppingListSetSlugActionBuilder.of().slug(ofEnglish("newSlug")).build(),
+            ShoppingListChangeNameActionBuilder.of().name(ofEnglish("newName")).build(),
+            ShoppingListSetDescriptionActionBuilder.of()
+                .description(ofEnglish("newDescription"))
+                .build(),
+            ShoppingListSetAnonymousIdActionBuilder.of().anonymousId("newAnonymousId").build(),
+            ShoppingListSetCustomerActionBuilder.of()
+                .customer(CustomerResourceIdentifierBuilder.of().id("customer_id_2").build())
+                .build(),
+            ShoppingListSetDeleteDaysAfterLastModificationActionBuilder.of()
+                .deleteDaysAfterLastModification(45L)
+                .build(),
+            ShoppingListSetCustomFieldActionBuilder.of()
+                .name("textField")
+                .value("newTextValue")
+                .build(),
+            ShoppingListChangeTextLineItemNameActionBuilder.of()
+                .textLineItemId("text_line_item_id_1")
+                .name(ofEnglish("newName1-EN").plus(Locale.GERMAN, "newName1-DE"))
+                .build(),
+            ShoppingListSetTextLineItemDescriptionActionBuilder.of()
+                .textLineItemId("text_line_item_id_1")
+                .description(ofEnglish("newDesc1-EN").plus(Locale.GERMAN, "newDesc1-DE"))
+                .build(),
+            ShoppingListChangeTextLineItemQuantityActionBuilder.of()
+                .textLineItemId("text_line_item_id_1")
+                .quantity(2L)
+                .build(),
+            ShoppingListSetTextLineItemCustomFieldActionBuilder.of()
+                .name("textField")
+                .value("newText1")
+                .textLineItemId("text_line_item_id_1")
+                .build(),
+            ShoppingListChangeTextLineItemNameActionBuilder.of()
+                .textLineItemId("text_line_item_id_2")
+                .name(ofEnglish("newName2-EN").plus(Locale.GERMAN, "newName2-DE"))
+                .build(),
+            ShoppingListSetTextLineItemDescriptionActionBuilder.of()
+                .textLineItemId("text_line_item_id_2")
+                .description(ofEnglish("newDesc2-EN").plus(Locale.GERMAN, "newDesc2-DE"))
+                .build(),
+            ShoppingListChangeTextLineItemQuantityActionBuilder.of()
+                .textLineItemId("text_line_item_id_2")
+                .quantity(4L)
+                .build(),
+            ShoppingListSetTextLineItemCustomFieldActionBuilder.of()
+                .name("textField")
+                .value("newText2")
+                .textLineItemId("text_line_item_id_2")
+                .build(),
+            ShoppingListChangeTextLineItemNameActionBuilder.of()
+                .textLineItemId("text_line_item_id_3")
+                .name(ofEnglish("newName3-EN").plus(Locale.GERMAN, "newName3-DE"))
+                .build(),
+            ShoppingListSetTextLineItemDescriptionActionBuilder.of()
+                .textLineItemId("text_line_item_id_3")
+                .description(ofEnglish("newDesc3-EN").plus(Locale.GERMAN, "newDesc3-DE"))
+                .build(),
+            ShoppingListChangeTextLineItemQuantityActionBuilder.of()
+                .textLineItemId("text_line_item_id_3")
+                .quantity(6L)
+                .build(),
+            ShoppingListSetTextLineItemCustomFieldActionBuilder.of()
+                .name("textField")
+                .value("newText3")
+                .textLineItemId("text_line_item_id_3")
+                .build());
   }
 
   @Nonnull
@@ -475,11 +509,12 @@ class TextLineItemListUpdateActionUtilsTest {
 
     final ShoppingListDraft template =
         ShoppingListReferenceResolutionUtils.mapToShoppingListDraft(
-            readObjectFromResource(resourcePath, ShoppingList.class), referenceIdToKeyCache);
+            TestUtils.readObjectFromResource(resourcePath, ShoppingList.class),
+            referenceIdToKeyCache);
 
     final ShoppingListDraftBuilder builder = ShoppingListDraftBuilder.of(template);
 
-    mapValuesToFutureOfCompletedValues(
+    CompletableFutureUtils.mapValuesToFutureOfCompletedValues(
             Objects.requireNonNull(builder.getTextLineItems()),
             textLineItemReferenceResolver::resolveReferences,
             toList())
@@ -498,13 +533,15 @@ class TextLineItemListUpdateActionUtilsTest {
   }
 
   @Nonnull
-  private static AddTextLineItem mapToAddTextLineItemAction(
+  private static ShoppingListAddTextLineItemAction mapToAddTextLineItemAction(
       @Nonnull final TextLineItemDraft textLineItemDraft) {
 
-    return AddTextLineItem.of(textLineItemDraft.getName())
-        .withDescription(textLineItemDraft.getDescription())
-        .withQuantity(textLineItemDraft.getQuantity())
-        .withAddedAt(textLineItemDraft.getAddedAt())
-        .withCustom(textLineItemDraft.getCustom());
+    return ShoppingListAddTextLineItemActionBuilder.of()
+        .name(textLineItemDraft.getName())
+        .description(textLineItemDraft.getDescription())
+        .quantity(textLineItemDraft.getQuantity())
+        .addedAt(textLineItemDraft.getAddedAt())
+        .custom(textLineItemDraft.getCustom())
+        .build();
   }
 }
